--- a/WebStudy/web/WEB-INF/web.xml
+++ b/WebStudy/web/WEB-INF/web.xml
@@ -4,6 +4,6 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
     <welcome-file-list>
-        <welcome-file>/WEB-INF/html5/00_index.html</welcome-file>
+        <welcome-file>myindex.html</welcome-file>
     </welcome-file-list>
 </web-app>
